# kuitansi-bos

./: .gitignore  README.md  buat_kuitansi.py  data.db  extract.py  identitas.txt  main.py  pyproject.toml
data/: data.db
src/: extract.py  main.py
src/utils/: ghostscript_setup.py
