[project]
name = "kuitansi-bos"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Soleh",email = "matthelosh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)","PyQt5 (<=5.15.16)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
